violating_resources/general/block-wildcard-ingress/samples/block-wildcard-ingress/disallowed/blank_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /wildcard-ingress
  name: block-wildcard-ingress-disallowed-blank-host
spec:
  rules:
  - host: ''
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example
            port:
              number: 80
