violating_resources/general/block-wildcard-ingress/samples/block-wildcard-ingress/disallowed/host_omitted.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /wildcard-ingress
  name: wildcard-ingress
spec:
  rules:
  # Omitted host field counts as a wildcard too
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example
            port:
              number: 80
