violating_resources/general/block-wildcard-ingress/samples/block-wildcard-ingress/disallowed/wildcard_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /wildcard-ingress
  name: block-wildcard-ingress-disallowed-wildcard-host
spec:
  rules:
  - host: '*.example.com'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example
            port:
              number: 80
  # Extra test to ensure the rule still detects invalid hosts in files containing valid hosts
  - host: 'valid.example.com'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example
            port:
              number: 80
